--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,11 +1,32 @@
 <div class="container" id ="siteTitle">
     <div class="row justify-content-center">
+        <div class="col">
+
+        </div>
         <div class="col align-self-center">
-            <h1>The Onion News Scraper</h1>
+            <h1>The Onion Scraper</h1>
+        </div>
+        <div class="col">
+
         </div>
     </div>
 
 </div>
+<div class="container">
+    <div class="row">
+        <div class="col">
+
+        </div>
+        <div class="col">
+            <button id="scrape">
+                Click to Scrape!
+            </button>
+        </div>
+    </div>
+</div>
+<span id="scrape-message">
+    
+</span>
 <div class="container" id="articles">
 
 
